Домашнее задание 4. Исправление после CR